Refactor network management and improve session handling: Update NetworkBase, NetworkClient, and NetworkServer to streamline socket communication and error handling. Introduce cooperative socket shutdown and enhance message processing with improved data structures. Update StoryMode to use record for Step representation and simplify JSON type references in Language class.